Building the game board for the desktop, working on mobile next, pretty happy with basic layout, few bugs need adressing though.

--- a/src/Components/PlayArea/style.css
+++ b/src/Components/PlayArea/style.css
@@ -1,33 +1,79 @@
+.play-area{
+    margin-top: -20px;
+    background-color: black;
+}
+
 .guess-display{
     text-transform: uppercase;
 }
 
-.grid-space{
-    outline: 5px solid yellow;
+.letter-display{
+    text-transform: uppercase;
+    font-size: 20pt;
+}
+
+.user-text{
+    color: red;
+    text-transform: uppercase;
+    text-align: center;
+    
+}
+
+.form-and-entry{
+    background-color: yellow;
+    width: 100%;
+    margin-left: 50%;
+
+}
+
+.entry-form{
+   
+}
+
+.entry-text-display{
+    background-color: pink;
+    height: 80px;
+}
+
+.letter-graveyard{
+    /* width: 20%; */
+    margin-left: 60%;
+    background-color: red;
 }
 
 .grey-block{
     background-color: grey;
-    margin-top: 20px;
-    width: 20px;
-    height: 20px;
+    margin-top: 10px;
+    width: 55px;
+    height: 35px;
 }
 
 .green-block{
     background: green;
-    margin-top: 20px;
-    width: 20px;
-    height: 20px;
+    margin-top: 10px;
+    width: 55px;
+    height: 35px;
 }
 
 .yellow-block{
    background-color: yellow;
-    margin-top: 20px;
-    width: 20px;
-    height: 20px;
+    margin-top: 10px;
+    width: 55px;
+    height: 35px;
 }
 
 .grid-row{
-    width: 90%;
-    margin-left: 5%;
+    width: 150%;
+    margin-left: 0%;
+}
+
+.grid-col{
+    background-color: green;
+    margin-right: -90px;
+    width: 30%;
+}
+/*  Hide mobile one */
+
+.mobile-letter-graveyard{
+    display: none;
 }
