--- a/src/Components/Title/style.css
+++ b/src/Components/Title/style.css
@@ -1,3 +1,5 @@
 .header{
     color: red;
+    font-size: 2em;
+    margin-top: -1px;
 }
